Adding tests, finishing implementation
